# vcs

./: .gitignore  CMakeLists.txt  README.md  ctags.sh  vcs-worker使用说明.txt  vcs_design.docx
example/echo/: CMakeLists.txt
example/echo/config/: config.json
example/echo/include/: client_handler.h  client_listener.h
example/echo/src/: client_handler.cpp  client_listener.cpp  main.cpp
example/group/: CMakeLists.txt  start.sh  stop.sh
example/group/client/: client.cpp
example/group/etc/: config.json
example/group/include/: chat_manager.h  group_callback.h  group_codec.h  group_config.h  group_outcome.h  group_router.h  group_service.h  group_task.h
example/group/include/model/: group_model.h  group_storage.h
example/group/protobuf/: gen.sh  group_package.pb.cc  group_package.pb.h  group_package.proto
example/group/src/: chat_manager.cpp  group_callback.cpp  group_codec.cpp  group_config.cpp  group_router.cpp  group_service.cpp  main.cpp
example/group/src/model/: group_model.cpp  group_storage.cpp
include/doctor/: ability_config.h  ability_counter.h  ability_help.h  ability_status.h  doctor_ability.h  doctor_codec.h  doctor_event.h  server_doctor.h
include/event_base/: buffer.h  event_base.h  helper.h  log.h
include/util/: server_config.h  sync_client.h  vc_codec.h
include/worker/: worker_base.h  worker_event.h  worker_manager.h  worker_thread.h
src/doctor/: ability_config.cpp  ability_counter.cpp  ability_help.cpp  ability_status.cpp  doctor_codec.cpp  doctor_event.cpp  server_doctor.cpp
src/event_base/: buffer.cpp  event_base.cpp  helper.cpp
(+7 files in other folders)
